crates/brasa_hir/tests/snapshots/lowering__coalesce.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let x
  Match
    Call
      Ident(lookup)
      Str("k")
    Ctor(Some)
      Binding($tmp0)
      Ident($tmp0)
    Ctor(None)
      Int(0)
