crates/brasa_hir/tests/snapshots/lowering__coalesce_chained.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let y
  Match
    Match
      Ident(a)
      Ctor(Some)
        Binding($tmp0)
        Ident($tmp0)
      Ctor(None)
        Ident(b)
    Ctor(Some)
      Binding($tmp1)
      Ident($tmp1)
    Ctor(None)
      Int(0)
