crates/brasa_hir/tests/snapshots/lowering__compound_assign_field_target.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let $tmp0
  Call
    Ident(point)
Assign
  Field(x)
    Ident($tmp0)
  Binary(+)
    Field(x)
      Ident($tmp0)
    Call
      Ident(delta)
