crates/brasa_hir/tests/snapshots/lowering__compound_assign_index_target.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let $tmp0
  Call
    Ident(cells)
Let $tmp1
  Call
    Ident(nextIndex)
Assign
  Index
    Ident($tmp0)
    Ident($tmp1)
  Binary(*)
    Index
      Ident($tmp0)
      Ident($tmp1)
    Int(2)
