crates/brasa_hir/tests/snapshots/lowering__interpolation.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let e
  Int(42)
Call
  Ident(puts)
  Binary(+)
    Binary(+)
      Str("x")
      ToString
        Ident(e)
    Str("y")
