crates/brasa_hir/tests/snapshots/lowering__interpolation_all_text.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let plain
  Str("hello\nworld")
Let raw
  Str("\nline one \\n stays literal\n")
