crates/brasa_hir/tests/snapshots/lowering__interpolation_lone.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let e
  Int(42)
Let s
  ToString
    Ident(e)
