crates/brasa_hir/tests/snapshots/lowering__interpolation_raw_with_interp.snap
---
source: crates/brasa_hir/tests/lowering.rs
expression: dump
---
Let name
  Str("brasa")
Let snippet
  Binary(+)
    Binary(+)
      Str("\nproject: ")
      ToString
        Ident(name)
    Str(" \\n literal\n")
